--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,21 +7,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Стоп"
+        android:text="@string/stop"
         android:id="@+id/btnStop"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/btnStart"
-        android:layout_gravity="right|bottom" />
+        android:layout_gravity="start|bottom" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Пуск"
+        android:text="@string/start"
         android:id="@+id/btnStart"
         android:layout_above="@+id/btnStop"
         android:layout_alignParentEnd="true"
